plugins {
    id 'application'
    id 'org.openjfx.javafxplugin' version '0.0.14'
}

repositories {
    mavenCentral()
}

dependencies {
    testImplementation 'org.junit.jupiter:junit-jupiter:5.10.0'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
    implementation 'org.xerial:sqlite-jdbc:3.45.0.0'
    implementation 'at.favre.lib:bcrypt:0.10.2'
    implementation 'org.slf4j:slf4j-simple:2.0.9'
}

java {
    sourceCompatibility = JavaVersion.VERSION_17
    targetCompatibility = JavaVersion.VERSION_17
}

javafx {
    version = "19"
    modules = ['javafx.controls'] // add 'javafx.fxml' if using FXML
}

sourceSets {
    main {
        java {
            srcDirs = ['src/main']
        }
    }
    test {
        java {
            srcDirs = ['src/test']
        }
    }
}

application {
    mainClass = 'com.lambert.banksimulator.Main'
}

tasks.named('run') {
    standardInput = System.in
    jvmArgs = [
            '--add-opens', 'javafx.graphics/com.sun.glass.utils=ALL-UNNAMED',
            '--add-opens', 'javafx.graphics/com.sun.marlin=ALL-UNNAMED'
    ]
}

test {
    useJUnitPlatform()
    testLogging {
        events "passed", "skipped", "failed"
        exceptionFormat "full"
        showStandardStreams = true
    }
}
